<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/speedMeterImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/speed_calculator"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/speedEditText"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_distance_meter"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/timeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_time_second"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="@+id/speedEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/speedEditText"
        app:layout_constraintTop_toBottomOf="@+id/speedEditText" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="101dp"
        android:layout_height="46dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="@+id/timeEditText"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="101dp"
        android:layout_height="46dp"
        android:layout_marginBottom="40dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/averageCalTextView"
        app:layout_constraintEnd_toStartOf="@+id/calButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/timeEditText"
        app:layout_constraintTop_toBottomOf="@+id/timeEditText" />

    <TextView
        android:id="@+id/averageCalTextView"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:background="#FFFFFF"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/speedMeterImageView"
        app:layout_constraintEnd_toEndOf="@+id/calButton"
        app:layout_constraintStart_toStartOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <TextView
        android:id="@+id/averageSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#FFFFFF"
        android:text="@string/avarage_speed_km_h"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/averageCalTextView"
        app:layout_constraintEnd_toEndOf="@+id/averageCalTextView"
        app:layout_constraintStart_toStartOf="@+id/averageCalTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>